z-index for tablets fix

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ html, body {
     bottom: 0;
     text-align: center;
     padding-top: 10%;
+    z-index: 99;
 }
 
 #congrats img {
